# whiskyDatabase

./: .env.config  .gitignore  README.md  pyproject.toml
whiskydatabase/: anomalies.csv  main.py
whiskydatabase/analysis/: anomaly_detection.py  data_processing.py  utils.py
whiskydatabase/configs/: club_whisky.yaml  drankdozijn.yaml  gall.yaml  heinemann_shop.yaml  whisky_exchange.yaml  whisky_nl.yaml
whiskydatabase/configs/sites/: drankdozijn.yaml  heinemann_shop.yaml
whiskydatabase/configs/sites/beverages/: BEL_SHOP_drankbaron.yaml  BEL_SHOP_ginsonline.yaml  BEL_SHOP_spiritswijnen.yaml  DE_SHOP_spiritswijnen copy.yaml  FR_SHOP_lavinoterie.yaml  FR_SHOP_les2cavistes.yaml  FR_SHOP_vinothequeduleman.yaml  GB_SHOP_thescottishgantry.yaml  NL_NET_drankdozijn.yaml  NL_SHOP_amsterdamliquorstore.yaml  NL_SHOP_caneandgrain.yaml  NL_SHOP_djamboslijterij.yaml  NL_SHOP_drinkz.yaml  NL_SHOP_pykslyterij.yaml  NL_SHOP_whiskywinkel.yaml  NL_WEB_whisky_nl.yaml  fields.yaml
whiskydatabase/data/: gall_&_gall_20240930.csv
whiskydatabase/scrapers/: base_scraper.py  beverage_scraper.py  clubwhisky_nl_scraper.py  drankdozijn_scraper.py  gall_scraper.py  heinemann_shop_scraper.py  network_scraper.py  scraper_factory.py  shopify_scraper.py  web_scraper.py  whisky_exchange_scraper.py  whisky_nl_scraper.py
whiskydatabase/utils/: headers.py  helpers.py  logger.py
